c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/void_ternary_condition.c
void f(void);

int main(void) {
    // the condition in a ternary expression must have scalar type
    return f() ? 1 : 2;
}